--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="mine">\uD83D\uDCA3</string>
     <string name="pick">\u26CF</string>
     <string name="flagnum">4</string>
+    <string name="myname">Hongyi Li</string>
 </resources>
